# beets-playlistc

./: LICENSE.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
beetsplug/: playlistc.py
